:recycle: code review

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -306,7 +306,7 @@ const {
   </div>
 </div>
 
-<script>
+<script type="module">
   // Import pour déclencher l'auto-initialisation du header
   import "../scripts/header/index.ts";
 </script>
