:bug: Suppression type module de l'import des modules TS du header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -306,7 +306,7 @@ const {
   </div>
 </div>
 
-<script type="module">
+<script>
   // Import pour déclencher l'auto-initialisation du header
   import "../scripts/header/index.ts";
 </script>
